--- a/build.yml
+++ b/build.yml
@@ -11,6 +11,8 @@ trigger:
     - pr/pr-build-qa.yml
     - pr/pr-build-uat.yml
     - pr/pr-build-master.yml
+  pool:
+    name: myagent
 pr: none
 
 jobs:
