--- a/build.yml
+++ b/build.yml
@@ -11,7 +11,7 @@ trigger:
     - pr/pr-build-qa.yml
     - pr/pr-build-uat.yml
     - pr/pr-build-master.yml
-pool: myagent
+pool: myagent1
 pr: none
 
 jobs:
