--- a/build.yml
+++ b/build.yml
@@ -31,9 +31,8 @@ jobs:
     #inputs:
      #   version: '16.15.0'
   
-  - bash: 
-        #npm install sfdx-cli --global
-        sfdx --version
+  - bash: npm install sfdx-cli --global
+        #sfdx --version
     displayName: Install Salesforce CLI 
   - task: DownloadSecureFile@1
     name: jwtKey
