--- a/build.yml
+++ b/build.yml
@@ -20,20 +20,34 @@ jobs:
   - group: sfdx-org-dev
   steps:
 
-  - task: NodeTool@0
-    inputs:
-     versionSpec: '16.x'
-    displayName: 'Install Node.js'
+  #- task: NodeTool@0
+   # inputs:
+    # versionSpec: '16.x'
+    #displayName: 'Install Node.js'
 
   
   #- task: UseNode@1
     #displayName: 'Use Node.js 16.15.0'
     #inputs:
      #   version: '16.15.0'
+  - task: UsePythonVersion@0
+    inputs:
+      versionSpec: '3.x'
+      addToPath: true
+
+  - script: |
+     # Install Salesforce CLI
+     npm install -g sfdx-cli
+    displayName: 'Install Salesforce CLI'
+
+  - script: |
+    # Verify Salesforce CLI installation
+     sfdx --version
+    displayName: 'Verify Salesforce CLI Installation'
   
-  - bash: npm install sfdx-cli --global
+  #- bash: npm install sfdx-cli --global
         #sfdx --version
-    displayName: Install Salesforce CLI 
+    #displayName: Install Salesforce CLI 
   - task: DownloadSecureFile@1
     name: jwtKey
     displayName: 'Download Server JWT Key'
