--- a/build.yml
+++ b/build.yml
@@ -21,7 +21,7 @@ jobs:
     #displayName: 'Install Node.js'
    - task: UsePythonVersion@0
      inputs:
-      versionSpec: '3.x'
+      versionSpec: 3.7.9
       addToPath: true
    - script: |
       # Install Salesforce CLI
