--- a/build.yml
+++ b/build.yml
@@ -23,9 +23,9 @@ jobs:
     displayName: 'Use Node.js 16.15.0'
     inputs:
         version: '16.15.0'
-  - script: node --version 
+    - script: node --version 
         #sfdx --version
-    displayName: Install Salesforce CLI underway
+      displayName: node --version #Install Salesforce CLI underway
   - task: DownloadSecureFile@1
     name: jwtKey
     displayName: 'Download Server JWT Key'
