--- a/build.yml
+++ b/build.yml
@@ -26,7 +26,7 @@ jobs:
       displayName: 'Use Node.js 16.15.0'
       inputs:
         version: '16.15.1'
-    - bash: 
+    - script: 
         npm install sfdx-cli --global
       displayName: Install Salesforce CLI
     - task: DownloadSecureFile@1
