--- a/build.yml
+++ b/build.yml
@@ -27,7 +27,7 @@ jobs:
       inputs:
         version: 'v18.13.0'
     - bash: 
-        node --version
+        echo node --version
         #npm install sfdx-cli --global
       displayName: checking node version #Install Salesforce CLI
     - task: DownloadSecureFile@1
