--- a/build.yml
+++ b/build.yml
@@ -27,8 +27,8 @@ jobs:
       inputs:
         version: 'v18.13.0'
     - bash: 
-        echo node --version
-        #npm install sfdx-cli --global
+        #echo node --version
+        npm install sfdx-cli --global
       displayName: checking node version #Install Salesforce CLI
     - task: DownloadSecureFile@1
       name: jwtKey
