--- a/build.yml
+++ b/build.yml
@@ -26,10 +26,8 @@ jobs:
       displayName: 'Use Node.js 16.15.0'
       inputs:
         version: 'v18.13.0'
-    - bash: 
-        #echo node --version
-        npm install sfdx-cli --global
-      displayName: checking node version #Install Salesforce CLI
+    - bash: npm install sfdx-cli --global  
+      displayName: Install Salesforce CLI
     - task: DownloadSecureFile@1
       name: jwtKey
       displayName: 'Download Server JWT Key'
